Minor fixes on stylesheets

--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -54,6 +54,10 @@ pre, code {
 	margin-top: 0;
 }
 
+.highlight {
+	background-color: yellow;
+}
+
 /*body {
 	background-color: beige;
 	cursor: default;
