--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -58,6 +58,10 @@ pre, code {
 	background-color: yellow;
 }
 
+.no-margin {
+	margin: 0 !important;
+}
+
 /*body {
 	background-color: beige;
 	cursor: default;
