Improves rendering of RaceForm

--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -81,6 +81,10 @@ pre, code {
 	text-indent: -3600px;
 }
 
+.prefix, .postfix {
+	cursor: default;
+}
+
 /*body {
 	background-color: beige;
 	cursor: default;
