--- a/www/assets/css/style.css
+++ b/www/assets/css/style.css
@@ -116,6 +116,27 @@ pre, code {
 	z-index: 2;
 }
 
+.relative {
+	position: relative;
+}
+
+.edit-details {
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding: 16px;
+	text-align: center;
+}
+
+.edit-details p {
+	margin: 0;
+	font-size: 8pt;
+}
+
+.sheet p {
+	margin: 2px 0;
+}
+
 /*body {
 	background-color: beige;
 	cursor: default;
