--- a/www/assets/css/jquery.dataTables.css
+++ b/www/assets/css/jquery.dataTables.css
@@ -136,13 +136,13 @@ table.dataTable tr th.sorting_asc, table.dataTable tr th.sorting_desc { backgrou
 	margin-left: 10px;
 }
 
-.paginate_enabled_previous { background: url('../img/back_enabled.png') no-repeat top left; }
-.paginate_enabled_previous:hover { background: url('../img/back_enabled_hover.png') no-repeat top left; }
-.paginate_disabled_previous { background: url('../img/back_disabled.png') no-repeat top left; }
+.paginate_enabled_previous { background: url('<?= basePath() ?>assets/img/back_enabled.png') no-repeat top left; }
+.paginate_enabled_previous:hover { background: url('<?= basePath() ?>assets/img/back_enabled_hover.png') no-repeat top left; }
+.paginate_disabled_previous { background: url('<?= basePath() ?>assets/img/back_disabled.png') no-repeat top left; }
 
-.paginate_enabled_next { background: url('../img/forward_enabled.png') no-repeat top right; }
-.paginate_enabled_next:hover { background: url('../img/forward_enabled_hover.png') no-repeat top right; }
-.paginate_disabled_next { background: url('../img/forward_disabled.png') no-repeat top right; }
+.paginate_enabled_next { background: url('<?= basePath() ?>assets/img/forward_enabled.png') no-repeat top right; }
+.paginate_enabled_next:hover { background: url('<?= basePath() ?>assets/img/forward_enabled_hover.png') no-repeat top right; }
+.paginate_disabled_next { background: url('<?= basePath() ?>assets/img/forward_disabled.png') no-repeat top right; }
 
 /* Full number pagination */
 .paging_full_numbers {
@@ -206,12 +206,12 @@ table.dataTable tr th.sorting_asc, table.dataTable tr th.sorting_desc { backgrou
 /*
  * Sorting
  */
-.sorting { background: url('../img/sort_both.png') no-repeat center right; }
-.sorting_asc { background: url('../img/sort_asc.png') no-repeat center right; }
-.sorting_desc { background: url('../img/sort_desc.png') no-repeat center right; }
+.sorting { background: url('<?= basePath() ?>assets/img/sort_both.png') no-repeat center right; }
+.sorting_asc { background: url('<?= basePath() ?>assets/img/sort_asc.png') no-repeat center right; }
+.sorting_desc { background: url('<?= basePath() ?>assets/img/sort_desc.png') no-repeat center right; }
 
-.sorting_asc_disabled { background: url('../img/sort_asc_disabled.png') no-repeat center right; }
-.sorting_desc_disabled { background: url('../img/sort_desc_disabled.png') no-repeat center right; }
+.sorting_asc_disabled { background: url('<?= basePath() ?>assets/img/sort_asc_disabled.png') no-repeat center right; }
+.sorting_desc_disabled { background: url('<?= basePath() ?>assets/img/sort_desc_disabled.png') no-repeat center right; }
 
 table.dataTable thead th:active,
 table.dataTable thead td:active {
